FBCM-347 fixed modal table styles to not always v-align top

--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -249,10 +249,6 @@ table {
         }
       }
 
-      .modal-content & {
-        vertical-align: top;
-      }
-
       &:first-child {
         padding-left: 20px;
       }
